--- a/Taller/Punto uno/app/src/main/res/layout/activity_main.xml
+++ b/Taller/Punto uno/app/src/main/res/layout/activity_main.xml
@@ -60,10 +60,10 @@
         android:id="@+id/labelResultado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/buttonConvertir" />
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
     <Button
         android:id="@+id/buttonConvertir"
