Memory sin validacion de perder

--- a/Taller juegos/app/src/main/res/layout/activity_main.xml
+++ b/Taller juegos/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,14 @@
         android:id="@+id/imageView"
         android:layout_width="126dp"
         android:layout_height="97dp"
-        android:layout_marginTop="96dp"
-        android:contentDescription="@string/todo"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/btn_star_big_on"
-        tools:ignore="ImageContrastCheck" />
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/image" />
 
     <TextView
         android:id="@+id/textView"
@@ -51,7 +51,7 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="@string/jugador_1"
+        android:hint="@string/field_jugador1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -65,7 +65,7 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="@string/jugador_2"
+        android:hint="@string/field_jugador2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
